ignore update after wrapper jar set

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,20 @@
 hs_err_pid*
 replay_pid*
 
-# idea ommit
-.idea/
+# general Spring
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
