--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=library
 spring.jpa.hibernate.ddl-auto=create
 logging.level.sql=debug
 
-spring.datasource.password=password
-spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#in memory DB:
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
