updating gradle and resources for using postgres from docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.password=password
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+management.endpoints.web.exposure.include=health, modulith
